# 2025-06

./: README.md  ai_ecosystem_analyzer.py  analyze_repos.py  ecosystem_reporter.py  ecosystem_summary.md  simple_reporter.py  structured_reporter.py  weekly_report.md
repofacts/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
repofacts/repofacts/: __init__.py  cli.py  reporter.py
repofacts/tests/: __init__.py  test_analyzer.py  test_cli.py  test_reporter.py
weekly/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
weekly/tests/: test_analyzer.py  test_cli.py  test_reporter.py  test_style_checker.py
weekly/weekly/: __init__.py  analyzer.py  cli.py  git_report.py  git_scanner.py  reporter.py
weekly/weekly/checkers/: __init__.py  base.py  docs.py  style.py
weekly/weekly/core/: report.py
