[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repofacts"
version = "0.1.0"
description = "Generate comprehensive reports from Git repositories"
readme = "README.md"
authors = [
    {name = "WronAI", email = "contact@wron.ai"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0.0",
    "markdown>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=0.900",
    "flake8>=4.0.0",
]

[project.scripts]
repofacts = "repofacts.cli:cli"

[project.urls]
"Homepage" = "https://github.com/wronai/repofacts"
"Bug Tracker" = "https://github.com/wronai/repofacts/issues"
