[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weekly"
version = "0.1.3"
description = "Project quality analyzer and next steps generator"
readme = "README.md"
authors = [
    {name = "Tom Sapletta", email = "info@softreck.dev"}
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.0.0",
    "toml>=0.10.0",
    "pyyaml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=0.900",
    "flake8>=4.0.0",
]

[project.scripts]
weekly = "weekly.cli:main"

[project.urls]
"Homepage" = "https://github.com/wronai/weekly"
"Bug Tracker" = "https://github.com/wronai/weekly/issues"
"Documentation" = "https://github.com/wronai/weekly#readme"
