[tool.poetry]
name = "weekly"
version = "0.1.3"
description = "Project quality analyzer and next steps generator"
authors = ["Tom Sapletta <info@softreck.dev>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/wronai/weekly"
documentation = "https://github.com/wronai/weekly#readme"
keywords = ["code quality", "analysis", "linter", "formatter", "ci-cd", "dependencies"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License 2.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.0"
toml = "^0.10.0"
pyyaml = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
black = "^22.0"
isort = "^5.0"
mypy = "^0.900"
flake8 = "^4.0.0"
pre-commit = "^3.0.0"
pip-audit = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
weekly = "weekly.cli:main"

[tool.poetry.urls]
"Homepage" = "https://github.com/wronai/weekly"
"Bug Tracker" = "https://github.com/wronai/weekly/issues"
"Documentation" = "https://github.com/wronai/weekly#readme"
"Changelog" = "https://github.com/wronai/weekly/blob/main/CHANGELOG.md"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=weekly --cov-report=term-missing"

[metadata]
license = "Apache-2.0"
license_files = ["LICENSE"]

